# maplibre-compose

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  hk.json  hk.pkl  justfile  mise.toml  settings.gradle.kts
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/run-with-avd/: action.yml
.github/actions/setup-cmake/: action.yml
.github/actions/setup-gradle/: action.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  daily.yml  release.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: library-conventions.gradle.kts  module-conventions.gradle.kts  util.kt
demo-app/: build.gradle.kts  demo_app.podspec
demo-app/src/androidIosShared/kotlin/org/maplibre/compose/demoapp/demos/: OfflineManagerDemo.kt
demo-app/src/androidMain/: AndroidManifest.xml
demo-app/src/androidMain/kotlin/dev/sargunv/maplibrecompose/demoapp/: MyCustomApplication.kt
demo-app/src/androidMain/kotlin/org/maplibre/compose/demoapp/: DemoState.android.kt
demo-app/src/androidMain/kotlin/org/maplibre/compose/demoapp/demos/: GestureOptionsDemo.android.kt  GmsLocationDemo.kt  OrnamentOptionsDemo.android.kt
demo-app/src/androidMain/kotlin/org/maplibre/compose/demoapp/util/: Platform.android.kt
demo-app/src/androidMain/kotlin/org/maplibre/compose/docsnippets/: Interaction.kt
demo-app/src/androidMain/res/values/: strings.xml
demo-app/src/commonMain/composeResources/drawable/: lock_24px.xml  lock_open_24px.xml
demo-app/src/commonMain/composeResources/files/styles/: colorful.json  eclipse.json  graybeard.json  osm-raster.json
demo-app/src/commonMain/kotlin/dev/sargunv/maplibrecompose/demoapp/: app.kt
demo-app/src/commonMain/kotlin/dev/sargunv/maplibrecompose/demoapp/demos/: AnimatedLayerDemo.kt  CameraFollowDemo.kt  ClusteredPointsDemo.kt  MarkersDemo.kt  SnapshotterDemo.kt  UserLocationDemo.kt
demo-app/src/commonMain/kotlin/dev/sargunv/maplibrecompose/demoapp/docs/: Layers.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/demoapp/: DemoApp.kt  DemoMap.kt  DemoState.kt  MapClickEvent.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/demoapp/demos/: AnimatedLayerDemo.kt  ClusteredPointsDemo.kt  Demo.kt  MapClickDemo.kt  MapManipulationDemo.kt  MarkersDemo.kt  UserLocationDemo.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/demoapp/design/: GridSelectorListItem.kt  ListItem.kt  SwitchListItem.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/demoapp/util/: Platform.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/docsnippets/: Layers.kt
demo-app/src/desktopMain/kotlin/org/maplibre/compose/demoapp/: DemoState.desktop.kt  Main.kt
demo-app/src/desktopMain/kotlin/org/maplibre/compose/demoapp/demos/: GestureOptionsDemo.desktop.kt
demo-app/src/desktopMain/kotlin/org/maplibre/compose/demoapp/util/: Platform.desktop.kt
demo-app/src/iosMain/kotlin/org/maplibre/compose/demoapp/: DemoState.ios.kt
demo-app/src/iosMain/kotlin/org/maplibre/compose/demoapp/demos/: GestureOptionsDemo.ios.kt
demo-app/src/iosMain/kotlin/org/maplibre/compose/demoapp/util/: Platform.ios.kt
demo-app/src/jsMain/kotlin/org/maplibre/compose/demoapp/demos/: GestureOptionsDemo.js.kt  OrnamentOptionsDemo.js.kt
demo-app/src/jsMain/kotlin/org/maplibre/compose/demoapp/util/: Platform.js.kt
demo-app/src/jsMain/resources/: index.html
demo-app/src/webMain/kotlin/org/maplibre/compose/demoapp/: DemoState.web.kt
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md  roadmap.md
gradle/: libs.versions.toml
iosApp/iosApp/: iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
lib/maplibre-compose/: build.gradle.kts
lib/maplibre-compose-expressions/: build.gradle.kts
lib/maplibre-compose-gms/: MODULE.md  build.gradle.kts
lib/maplibre-compose-gms/src/androidMain/kotlin/org/maplibre/compose/gms/: FusedLocationProvider.kt
lib/maplibre-compose-material3/: build.gradle.kts
lib/maplibre-compose-material3/src/commonMain/kotlin/org/maplibre/compose/material3/: CompassButton.kt  LocationPuckDefaults.kt  PointerPinButton.kt
lib/maplibre-compose/src/androidHostTest/kotlin/org/maplibre/compose/offline/: TilePackDefinitionTest.kt
lib/maplibre-compose/src/androidMain/kotlin/dev/sargunv/maplibrecompose/compose/: AndroidMapView.kt
lib/maplibre-compose/src/androidMain/kotlin/dev/sargunv/maplibrecompose/core/: AndroidMap.kt  AndroidMapSnapshotter.kt
lib/maplibre-compose/src/androidMain/kotlin/org/maplibre/compose/location/: AndroidLocationProvider.kt  HandlerExecutor.kt  Location.android.kt  LocationEngineLocationProvider.kt
lib/maplibre-compose/src/androidMain/kotlin/org/maplibre/compose/map/: AndroidMapAdapter.kt  AndroidMapView.kt  GestureOptions.kt
lib/maplibre-js-bindings/: MODULE.md  build.gradle.kts
lib/maplibre-native-bindings/: MODULE.md  build.gradle.kts
lib/maplibre-native-bindings-jni/: CMakeLists.txt  CMakePresets.json  build.gradle.kts
lib/maplibre-native-bindings-jni/cmake/: target.cmake  vars.cmake
lib/maplibre-native-bindings-jni/cmake/backends/: metal.cmake  opengl.cmake  vulkan.cmake
lib/maplibre-native-bindings-jni/cmake/dependencies/: jni.cmake  maplibre-native.cmake  platform.cmake  simplejni.cmake
lib/maplibre-native-bindings-jni/src/main/cpp/: canvas_frontend.cpp  canvas_metal_backend.mm  canvas_opengl_backend.cpp  canvas_renderer.hpp  conversions.cpp  conversions.hpp  fix_x11_pollution.h  java_classes.hpp  jawt_context.hpp  jni_map_observer.cpp  jni_map_observer.hpp  jni_on_load.cpp  maplibre_map.cpp  maplibre_util_projection.cpp  utils.hpp
scripts/: swift-format.py
(+189 files in other folders)
